--- a/src/app/servers-info/servers-info.component.html
+++ b/src/app/servers-info/servers-info.component.html
@@ -9,6 +9,6 @@
     class="btn btn-primary"
     [disabled]="!allowNewServer"
     (click)="onCreateServer()">Add server</button>
-    <p> {{ serverCreationStatus }}</p>
+    <!-- <p> {{ serverCreationStatus }}</p> -->
 <app-server-info></app-server-info>
 <app-server-info></app-server-info>
