--- a/src/app/servers-info/servers-info.component.html
+++ b/src/app/servers-info/servers-info.component.html
@@ -10,5 +10,8 @@
     [disabled]="!allowNewServer"
     (click)="onCreateServer()">Add server</button>
     <!-- <p> {{ serverCreationStatus }}</p> -->
-<app-server-info></app-server-info>
-<app-server-info></app-server-info>
+    <p *ngIf="serverCreated; else noServer">Server was created, server name is {{ serverName }}</p>
+    <ng-template #noServer>
+        <p>Loading...</p>
+    </ng-template>
+<app-server-info *ngFor="let server of servers"></app-server-info>
