modifiche in base a suggestions tslint

--- a/src/app/server-info/server-info.component.html
+++ b/src/app/server-info/server-info.component.html
@@ -1,1 +1,1 @@
-<p>{{ 'Server'}} sono il serverId {{ serverId }} con lo stato {{ getServerStatus() }}</p>
+<p>{{ "Server" }} sono il serverId {{ serverId }} con lo stato {{ getServerStatus() }}</p>
