prova modifica compomente

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-xs12">
-            <h3>sono l'app component !</h3>
+            <h3>sono l'app component</h3>
             <hr>
             <app-servers-info></app-servers-info>
         </div>
