--- a/src/app/servers-info/servers-info.component.html
+++ b/src/app/servers-info/servers-info.component.html
@@ -1,10 +1,12 @@
 <!-- <input type="text" 
     class="form-control" 
     (input)="onUpdateServerName($event)"> -->
-<input type="text" 
-    class="form-control" 
-    [(ngModel)]="serverName">
-    <!-- <p> {{ serverName }} </p> -->
+<label>Server Name
+  <input type="text"
+      class="form-control"
+      [(ngModel)]="serverName">
+</label>
+<!-- <p> {{ serverName }} </p> -->
 <button
     class="btn btn-primary"
     [disabled]="!allowNewServer"
