--- a/src/app/servers-info/servers-info.component.html
+++ b/src/app/servers-info/servers-info.component.html
@@ -1,16 +1,22 @@
-<!-- <input type="text" 
+
+<!-- <label>Input event</label>
+<input type="text" 
     class="form-control" 
     (input)="onUpdateServerName($event)"> -->
-<label>Server Name
-  <input type="text"
-      class="form-control"
-      [(ngModel)]="serverName">
-</label>
+    <!-- <input class="form-control" [value]="serverName" (input)="serverName = $event.target.value"> -->
+
+<label>Server Name</label>
+<input type="text"
+    class="form-control"
+    [(ngModel)]="serverName">
 <!-- <p> {{ serverName }} </p> -->
+
 <button
     class="btn btn-primary"
     [disabled]="!allowNewServer"
     (click)="onCreateServer()">Add server</button>
+
     <p> {{ serverCreationStatus }}</p>
+
 <app-server-info></app-server-info>
 <app-server-info></app-server-info>
